[FIX] mrp_workorder: flickering issue on tablet view
in this commit, avoid the flickering  when we set serial/lot number on the
tablet view

task-2058431

closes odoo/enterprise#5383

--- a/mrp_workorder/static/src/scss/tablet_view.scss
+++ b/mrp_workorder/static/src/scss/tablet_view.scss
@@ -123,6 +123,17 @@
                 }
 
                 .o_workorder_field {
+                    > div.o_workorder_lot {
+                        width: 100%;
+                        justify-content: center;
+                        > .o_lot_number {
+                            width: 50%;
+                            &:not(.o_with_button) button.o_external_button {
+                                display: block !important;
+                                visibility: hidden;
+                            }
+                        }
+                    }
                     > div {
                         display: inline-flex;
                         align-items: baseline;
